--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@
 
 	<groupId>net.stickycode.bootstrap</groupId>
 	<artifactId>sticky-bootstrap-spring4</artifactId>
-	<version>1.6-SNAPSHOT</version>
+	<version>2.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>sticky-bootstrap-spring4-2</name>
-	<description>Bootstrap support for guice that will scan the given packages and contruct an injector for it</description>
+	<description>Bootstrap support for spring that will scan the given packages and contruct a context for it</description>
 	<inceptionYear>2012</inceptionYear>
 	<url>http://www.StickyCode.net/bootstrap/sticky-bootstrap-spring3/</url>
 
@@ -29,7 +29,7 @@
 		<dependency>
 			<groupId>net.stickycode.bootstrap</groupId>
 			<artifactId>sticky-bootstrap-tck</artifactId>
-			<version>[1.7,2)</version>
+			<version>[2,3)</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -54,7 +54,7 @@
 		<dependency>
 			<groupId>net.stickycode.bootstrap</groupId>
 			<artifactId>sticky-bootstrap-api</artifactId>
-			<version>[2.7,3)</version>
+			<version>[3,4)</version>
 		</dependency>
 	</dependencies>
 
