github release chain

--- a/pom.xml
+++ b/pom.xml
@@ -1,61 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright (c) 2011 RedEngine Ltd, http://www.redengine.co.nz. All rights
-	reserved. -->
+<!-- Copyright (c) 2011 RedEngine Ltd, http://www.redengine.co.nz. All rights reserved. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<parent>
-		<groupId>net.stickycode.parent</groupId>
-		<artifactId>sticky-parent-jar8</artifactId>
-		<version>1.4</version>
-	</parent>
-	<modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>net.stickycode.parent</groupId>
+    <artifactId>sticky-parent-jar8</artifactId>
+    <version>3.1</version>
+  </parent>
+  <modelVersion>4.0.0</modelVersion>
 
-	<groupId>net.stickycode.bootstrap</groupId>
-	<artifactId>sticky-bootstrap-spring4</artifactId>
-	<version>2.5-SNAPSHOT</version>
-	<packaging>jar</packaging>
+  <groupId>net.stickycode.bootstrap</groupId>
+  <artifactId>sticky-bootstrap-spring4</artifactId>
+  <version>2.5-SNAPSHOT</version>
+  <packaging>jar</packaging>
 
-	<name>sticky-bootstrap-spring4-2</name>
-	<description>Bootstrap support for spring that will scan the given packages and contruct a context for it</description>
-	<inceptionYear>2012</inceptionYear>
-	<url>http://www.StickyCode.net/bootstrap/sticky-bootstrap-spring3/</url>
+  <name>sticky-bootstrap-spring4-2</name>
+  <description>Bootstrap support for spring that will scan the given packages and contruct a context for it</description>
+  <inceptionYear>2012</inceptionYear>
 
-	<scm>
-		<connection>scm:svn:http://stickycode.googlecode.com/svn/trunk/net.stickycode.bootstrap/sticky-bootstrap-spring4</connection>
-		<developerConnection>scm:svn:https://stickycode.googlecode.com/svn/trunk/net.stickycode.bootstrap/sticky-bootstrap-spring4</developerConnection>
-		<url>http://code.google.com/p/stickycode/source/browse/#svn/trunk/net.stickycode.bootstrap/sticky-bootstrap-spring4</url>
-	</scm>
+  <url>https://stickycode.readthedocs.io/en/latest/bootstrap/index.html</url>
 
-	<dependencies>
-		<dependency>
-			<groupId>net.stickycode.bootstrap</groupId>
-			<artifactId>sticky-bootstrap-tck</artifactId>
-			<version>[3,4)</version>
-			<scope>test</scope>
-		</dependency>
+  <scm>
+    <connection>${git.url}</connection>
+    <developerConnection>${git.url}</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
 
-		<dependency>
-			<groupId>net.stickycode</groupId>
-			<artifactId>sticky-reflector</artifactId>
-			<version>[3.2,4)</version>
-		</dependency>
+  <dependencies>
+    <dependency>
+      <groupId>net.stickycode.bootstrap</groupId>
+      <artifactId>sticky-bootstrap-tck</artifactId>
+      <version>[3,4)</version>
+      <scope>test</scope>
+    </dependency>
 
-		<dependency>
-			<groupId>net.stickycode.composite</groupId>
-			<artifactId>sticky-composite-spring4</artifactId>
-			<version>[1.3,2)</version>
-		</dependency>
+    <dependency>
+      <groupId>net.stickycode</groupId>
+      <artifactId>sticky-reflector</artifactId>
+      <version>[3.2,4)</version>
+    </dependency>
 
-		<dependency>
-			<groupId>net.stickycode</groupId>
-			<artifactId>sticky-metadata-reflective</artifactId>
-			<version>[3.2,4)</version>
-		</dependency>
+    <dependency>
+      <groupId>net.stickycode.composite</groupId>
+      <artifactId>sticky-composite-spring4</artifactId>
+      <version>[1.3,2)</version>
+    </dependency>
 
-		<dependency>
-			<groupId>net.stickycode.bootstrap</groupId>
-			<artifactId>sticky-bootstrap-api</artifactId>
-			<version>[3.4,4)</version>
-		</dependency>
-	</dependencies>
+    <dependency>
+      <groupId>net.stickycode</groupId>
+      <artifactId>sticky-metadata-reflective</artifactId>
+      <version>[3.2,4)</version>
+    </dependency>
+
+    <dependency>
+      <groupId>net.stickycode.bootstrap</groupId>
+      <artifactId>sticky-bootstrap-api</artifactId>
+      <version>[3.4,4)</version>
+    </dependency>
+  </dependencies>
 
 </project>
