--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Copyright (c) 2011 RedEngine Ltd, http://www.redengine.co.nz. All rights reserved. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <parent>
     <groupId>net.stickycode.parent</groupId>
     <artifactId>sticky-parent-jar8</artifactId>
@@ -10,7 +10,7 @@
 
   <groupId>net.stickycode.bootstrap</groupId>
   <artifactId>sticky-bootstrap-spring4</artifactId>
-  <version>2.5-SNAPSHOT</version>
+  <version>2.5</version>
   <packaging>jar</packaging>
 
   <name>sticky-bootstrap-spring4-2</name>
@@ -22,21 +22,21 @@
   <scm>
     <connection>${git.url}</connection>
     <developerConnection>${git.url}</developerConnection>
-    <tag>HEAD</tag>
+    <tag>sticky-bootstrap-spring4-2.5</tag>
   </scm>
 
   <dependencies>
     <dependency>
       <groupId>net.stickycode.bootstrap</groupId>
       <artifactId>sticky-bootstrap-tck</artifactId>
-      <version>[3,4)</version>
+      <version>[3.1,4)</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>net.stickycode</groupId>
       <artifactId>sticky-reflector</artifactId>
-      <version>[3.2,4)</version>
+      <version>[3.3,4)</version>
     </dependency>
 
     <dependency>
